examples/test/testpolicy210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy210
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key26: value7
      key24: value17
      key41: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value9
          key6: value7
      podSelector:
        matchLabels:
          key11: value19
          key44: value6
          key37: value32
